updated README file together with css files

--- a/css/loaders/loader.css
+++ b/css/loaders/loader.css
@@ -1,13 +1,8 @@
 /*! ------------------------------------------------
- * Project Name: Name: Braxton - Personal Portfolio & Resume HTML Template
- * Project Description: Show yourself brightly with Braxton - unique and creative portfolio and resume template!
- * Tags: mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean 
+ * Project Name: Willis Ivali- Personal Portfolio & Resume HTML Template
  * Version: 1.0.0
- * Build Date: March 2024
- * Last Update: March 2024
- * This product is available exclusively on Themeforest
- * Author: mix_design
- * Author URI: https://themeforest.net/user/mix_design */
+ * Build Date: August 2024
+ * Last Update: August 2024
 /*! File name: loader.css
  * ------------------------------------------------
  *
